Working towards implementing the API